--- a/CanonGPSLogWPF/MainWindow.xaml
+++ b/CanonGPSLogWPF/MainWindow.xaml
@@ -1,7 +1,7 @@
 ﻿<Window x:Class="CanonGPSLogWPF.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="Canon GPS Track to GPX Converter" Height="150" Width="400">
+        Title="Canon GPS Track to GPX Converter" MinHeight="150" MinWidth="400" SizeToContent="WidthAndHeight">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="*"/>
